--- a/GrapheneTrace.Client/_Imports.razor
+++ b/GrapheneTrace.Client/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using GrapheneTrace.Client
 @using GrapheneTrace.Client.Layout
+@using GrapheneTrace.Client.Models
+@using GrapheneTrace.Client.Components.Admin
+@using MudBlazor
+@using MudBlazor.Charts
