--- a/GrapheneTrace.Client/Layout/NavMenu.razor
+++ b/GrapheneTrace.Client/Layout/NavMenu.razor
@@ -10,13 +10,23 @@
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass nav-scrollable">
     <nav class="flex-column">
         @if (Role == UserRole.Admin)
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/admin/dashboard" Match="NavLinkMatch.Prefix">
-                    <span class="bi bi-speedometer2" aria-hidden="true"></span> Admin Dashboard
+                    <span class="bi-house-door-fill-nav-menu me-2" aria-hidden="true"></span> Admin Dashboard
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/admin/users" Match="NavLinkMatch.Prefix">
+                    <span class="bi-plus-square-fill-nav-menu me-2" aria-hidden="true"></span> User Management
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/admin/configuration" Match="NavLinkMatch.Prefix">
+                    <span class="bi-list-nested-nav-menu me-2" aria-hidden="true"></span> System Configuration
                 </NavLink>
             </div>
         }
@@ -42,7 +52,7 @@
 @code {
     [Parameter] public UserRole? Role { get; set; }
 
-    private bool collapseNavMenu = true;
+    private bool collapseNavMenu = false;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
