jwt connection successfully

--- a/GrapheneTrace.Client/_Imports.razor
+++ b/GrapheneTrace.Client/_Imports.razor
@@ -10,5 +10,8 @@
 @using GrapheneTrace.Client.Layout
 @using GrapheneTrace.Client.Models
 @using GrapheneTrace.Client.Components.Admin
+@using GrapheneTrace.Core.DTOs.Auth
+@using GrapheneTrace.Core.DTOs.Patient
 @using MudBlazor
 @using MudBlazor.Charts
+@using System.Linq
